--- a/总结.md
+++ b/总结.md
@@ -1,2 +1,14 @@
 # 总结
 
+以上只是个人的一些整理和思考，在具体的知识点中，需要根据岗位或者自身的情况进行展开和深入思考，祝大家前程似锦。
+如果需要联系交流自己的心得体会，下面是我的一些联系方式：
+
+* Email: `i#lirawx.cn`
+* Github: `lirawx`
+* Twitter: `lira_wx`
+
+
+
+# The END
+
+
